--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,9 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 
-#intellij
+# Maven
+target/
+
+# Intellij
 .idea/
 daylog.iml
